--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>去哪儿旅行</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app"><!-- shell --></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
